--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -16,10 +16,20 @@
         margin: 0 0 40px 0;
         overflow-x: auto;
         overflow-y: hidden;
-        
+        &::-webkit-scrollbar {
+            height: 4px;
+            
+          }
+        &::-webkit-scrollbar-track {
+            background: transparent;
+          }
+        &::-webkit-scrollbar-thumb {
+            background-color: #B7B7B7;
+            border-radius: 3px;
+          }
         gap: 21px;
         li {
-            height: 38px;
+            height: 48px;
             white-space: nowrap;
             border-radius: 4px;
             padding: 2px 24px;
@@ -66,7 +76,7 @@
         color: var(--accent);
     }
     &__for {
-        padding: 104px 0 40px;
+        padding: 161px 0 108px;
         color: #fff;
         .heading {
             color: #fff;
@@ -84,7 +94,7 @@
         }
         &__item {
             border-radius: 4px;
-            padding: 32px;
+            padding: 32px 32px 38px;
             background: var(--accent);
         }
         &__title {
@@ -96,10 +106,11 @@
         }
         .fs_16 {
             margin: 0;
+            max-width: 470px;
         }
     }
     &__tasks {
-        padding: 40px 0;
+        padding: 40px 0 112px;
         &__wrapper {
             margin-top: 48px;
             display: grid;
@@ -132,7 +143,7 @@
     }
     &__career {
         background: var(--accent);
-        padding: 104px 0 112px;
+        padding: 104px 0 105px;
         .title {
             text-align: center;
             color:#fff;
@@ -143,6 +154,8 @@
             line-height: 150%;
             text-align: center;
             color: var(--white);
+            max-width: 528px;
+            margin: 16px auto 0;
         }
         &__wrapper {
             margin-top: 48px;
@@ -211,7 +224,7 @@
         }
     }
     &__learn {
-        padding: 104px 0 112px;
+        padding: 104px 0 168px;
         .title {
             text-align: center;
         }
@@ -292,6 +305,10 @@
     }
     &__programm {
         padding-top: 0;
+        padding-bottom: 36px;
+        .about__learn__accord {
+            margin-top: 32px;
+        }
         &__info {
             display: flex;
             justify-content: flex-start;
@@ -344,7 +361,7 @@
         &__small {
             border: 1px solid var(--accent);
             border-radius: 4px;
-            padding: 8px 16px;
+            padding: 2px 16px;
             font-weight: 400;
             font-size: 12px;
             display: flex;
@@ -353,13 +370,15 @@
             color: var(--accent);
             margin-right: 16px;
             margin-bottom: 24px;
+            height: 32px;
             &:last-child {
                 margin-right: 0;
             }
         }
+
     }
     &__plan {
-       padding: 112px 0 208px;
+       padding: 112px 0 112px;
         &__wrapper {
             background: url(../img/about-plan-bg.jpg) no-repeat center right/cover;
             padding: 48px 56px 56px;
@@ -382,9 +401,14 @@
             right: 5%;
             bottom: 0%;
         }
+        .btn_main {
+            margin: 48px auto 0;
+            display: block;
+            width: fit-content;
+        }
     }
     &__form {
-        padding: 112px;
+        padding: 112px 0;
         background: linear-gradient(45deg, #bfd5f3 0%, #e2eefa 100%);
         &__wrapper {
             display: flex;
@@ -399,9 +423,15 @@
             display: flex;
             flex-direction: column;
             gap: 12px;
+            margin-top: 8px;
+            max-width: 536px;
+        }
+        .policy {
+            margin-bottom: 14px;
         }
     }
     &__docs {
+        padding-bottom: 32px;
         .title {
             text-align: center;
 
@@ -539,7 +569,7 @@
             gap: 32px;
         }
         &__item {
-            padding: 32px;
+            padding: 32px 32px 29px;
             min-height: 409px;
             &1 {
                 border: 1px solid var(--accent);
@@ -579,7 +609,7 @@
             li {
                 position: relative;
                 padding-left: 36px;
-                margin-bottom: 12px;
+                margin-bottom: 14px;
                 &::before {
                     content: '';
                     display: block;
@@ -638,11 +668,11 @@
             
         }
         &__slider {
-            margin-top: 96px;
+            margin-top: 52px;
             position: relative;
             .slick-arrow {
                 position: absolute;
-                top: -130px;
+                top: -94px;
                 
                 cursor: pointer;
                 font-size: 1px;
@@ -650,8 +680,8 @@
                 border-radius: 100%;
                 border: 1px solid var(--accent);
                 background-color: transparent;
-                width: 40px;
-                height: 40px;
+                width: 48px;
+                height: 48px;
                 
                 z-index: 10;
                 transition: background-color .3s;
@@ -672,7 +702,7 @@
                 }
                 }
                 .slick-prev {
-                    right: 56px;
+                    right: 64px;
                     &::before {
                         transform: translate(-50%, -50%) rotate(-90deg);
                     }
@@ -699,6 +729,7 @@
             border-radius: 4px;
             background: var(--white);
             padding: 32px;
+            min-height: 304px;
         }
         &__photo {
             border-radius: 100%;
@@ -738,7 +769,7 @@
         }
     }
     &__quest {
-        padding: 112px 0;
+        padding: 150px 0 112px;
         background: linear-gradient(45deg, #bfd5f3 0%, #e2eefa 100%);
         &__form {
             background: var(--white);
@@ -781,4 +812,8 @@
   .pt_0 {
     padding-top: 0;
 
+}
+.p-inline_0 {
+    padding-left: 0;
+    padding-right: 0;
 }
