--- a/scss/_cost.scss
+++ b/scss/_cost.scss
@@ -24,9 +24,9 @@
     &__item {
         font-weight: 700;
         font-size: 20px;
-        line-height: 140%;
+        line-height: 137%;
         color: var(--bold);
-        padding: 24px 36px;
+        padding: 24px 4px 24px 36px;
         border-top: 1px solid var(--grey-light);
         border-bottom: 1px solid var(--grey-light);
         position: relative;
