--- a/scss/_assessments.scss
+++ b/scss/_assessments.scss
@@ -1,5 +1,6 @@
 .assessments {
     padding: 112px 0;
+    min-height: 663px;
     &__wrapper {
         // display: grid;
         // grid-template-columns: repeat(2, 1fr);
