--- a/scss/style.scss
+++ b/scss/style.scss
@@ -373,4 +373,5 @@ details summary::-webkit-details-marker {
 @import '_learn.scss';
 @import '_pay.scss';
 @import '_order.scss';
-@import "_assessments.scss";
+@import '_assessments.scss';
+@import '_programm.scss';
