--- a/scss/style.scss
+++ b/scss/style.scss
@@ -339,6 +339,7 @@ details summary::-webkit-details-marker {
         }
         input {
             width: 100%;
+            padding-left: 70px;
            }
     }
     
