--- a/scss/_programm.scss
+++ b/scss/_programm.scss
@@ -1,5 +1,5 @@
 .programm {
-    padding: 0 0 112px;
+    padding: 40px 0 112px;
     .title {
         text-align: center;
         max-width: 536px;
@@ -16,7 +16,10 @@
         margin-bottom: 0;
        }
         &-top {
-            padding: 32px;
+            padding: 32px 36px 32px 32px;
+            min-height: 116px;
+            display: flex;
+            align-items: center;
         }
         &-bottom {
             background-color: #f2f5f7;
