--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -275,7 +275,7 @@
             }
             .btn_main {
                 margin: 48px auto 0;
-                display: block;
+                
             }
         }
         &__list {
@@ -386,7 +386,7 @@
             position: relative;
         }
         &__content {
-            max-width: 440px;
+            max-width: 40%;
         }
         &__text {
             margin: 24px 0 32px;
@@ -403,7 +403,7 @@
         }
         .btn_main {
             margin: 48px auto 0;
-            display: block;
+            
             width: fit-content;
         }
     }
@@ -464,7 +464,7 @@
             }
         }
         .btn_main {
-            display: block;
+           
             margin: 48px auto 0;
         }
     }
@@ -509,7 +509,7 @@
                 top: 24px;
                 .slick-track {
                     display: flex;
-                flex-direction: column;
+                    flex-direction: column;
                     width: 100%;
                     max-width: 100%;
                     transform: translate(0, 0px);
@@ -764,7 +764,7 @@
             margin: 16px 0;
         }
         .btn_main {
-            display: block;
+            
             margin: 0 auto;
         }
     }
