--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -102,3 +102,48 @@ header {
         }
     }
 }
+.logo {
+    width: 264px;
+    img {
+        width: 100%;
+    }
+}
+.hamburger {
+    display: none;
+    justify-content: space-between;
+    flex-direction: column;
+    width: 25px;
+    height: 15px;
+    position: absolute;
+    z-index: 2;
+    top: 20px;
+    right: 20px;
+    cursor: pointer;
+    span {
+        width: 100%;
+        height: 2px;
+        background: var(--bold);
+        display: block;
+        transition: all .3s;
+    }
+    &_active {
+        top: 20px;
+        z-index: 3;
+        span {
+            &:nth-child(1) {
+                transform: rotate(45deg) translateY(9px);
+                
+            }
+            &:nth-child(2) {
+                display: none;
+            }
+            &:nth-child(3) {
+                transform: rotate(-45deg) translateY(-10px);
+               
+            }
+        }
+    }
+}
+.mobile {
+    display: none;
+}
